Added ability to turn off auditing on non-compliance firearm fields (location, grade); cleaned up admin_main look.

--- a/ADExpert/admin_main.html
+++ b/ADExpert/admin_main.html
@@ -3,13 +3,14 @@ _R_IFTOP
 <p align="right"><a href="_R_SCRIPT_NAME?action=logout">Log out</a></p>
 <p><b>ADExpert Administration</b>
 <table>
-<tr><td><a href="_R_SCRIPT_NAME?action=all_inventory_firearms">View and manage firearms in inventory</a></td></tr>
-<tr><td><a href="_R_SCRIPT_NAME?action=all_disposed_firearms">View and manage disposed firearms</a></td></tr>
-<tr><td><a href="_R_SCRIPT_NAME?action=all_trading_partners">View and manage trading partners</a></td></tr>
-<tr><td><a href="_R_SCRIPT_NAME?action=all_acquisitions">View and manage acquisitions</a></td></tr>
-<tr><td><a href="_R_SCRIPT_NAME?action=all_dispositions">View and manage dispositions</a></td></tr>
-<tr><td><a href="_R_SCRIPT_NAME?action=all_edit_logs">View edit log</a></td></tr>
-<tr><td><a href="_R_SCRIPT_NAME?action=audit_reports">View audit reports</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_inventory_firearms">Firearms in inventory</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_disposed_firearms">Disposed firearms</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_trading_partners">Trading partners</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_acquisitions">Acquisitions</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_dispositions">Dispositions</a></td></tr>
+
+<tr><td><a href="_R_SCRIPT_NAME?action=all_edit_logs">Edit log</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=audit_reports">Audit reports</a></td></tr>
 </table>
 </div>
 </body></html>
