--- a/ADExpert/audit_reports.html
+++ b/ADExpert/audit_reports.html
@@ -2,12 +2,12 @@ _R_IFTOP
 <div class="pagecontent">
 <p align="right"><a href="_R_SCRIPT_NAME?action=logout">Log out</a></p>
 <p><b>Audit Reports</b></p>
-<ul>
-<li><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits">View pre-edit saved firearm records</a></li>
-<li><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits">View pre-edit saved trading partner records</a></li> 
-<li><a href="_R_SCRIPT_NAME?action=all_acquisition_pre_edits">View pre-edit saved acquisition records</a></li>
-<li><a href="_R_SCRIPT_NAME?action=all_disposition_pre_edits">View pre-edit saved disposition records</a></li>
-</ul>
+<table>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits">View pre-edit saved firearm records</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits">View pre-edit saved trading partner records</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_acquisition_pre_edits">View pre-edit saved acquisition records</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_disposition_pre_edits">View pre-edit saved disposition records</a></td></tr>
+</table>
 <p align="center">Return to <a href="_R_SCRIPT_NAME">main screen</a></p>
 </div>
 </body></html>
