Added A&D reports, ability to open and close books

--- a/ADExpert/admin_main.html
+++ b/ADExpert/admin_main.html
@@ -11,6 +11,9 @@ _R_IFTOP
 
 <tr><td><a href="_R_SCRIPT_NAME?action=all_edit_logs">Edit log</a></td></tr>
 <tr><td><a href="_R_SCRIPT_NAME?action=audit_reports">Audit reports</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=ad_book_report">A&amp;D book report</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=open_book">Open book</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=close_book">Close book</a></td></tr>
 </table>
 </div>
 </body></html>
