--- a/ADExpert/iftop.html
+++ b/ADExpert/iftop.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html><head><title>ADExpert</title>
+<html><head><title>_R_APPLICATION</title>
 <meta content="text/html; charset=windows-1252" http-equiv=Content-Type>
-<meta content="MSHTML 5.00.3315.2870" name=GENERATOR><link rel="stylesheet" type="text/css" href="/adexpert-style.css">
+<meta content="MSHTML 5.00.3315.2870" name=GENERATOR><link rel="stylesheet" type="text/css" href="/_R_CSS_STYLE">
 </head>
 <body aLink=#ff0000 bgColor=#ffffff link=#0000ff text=#000000 vLink=#000080>
 <div class="headline">
-<p class="ctmainhead" align="center">ADExpert</p>
+<p class="ctmainhead" align="center">_R_SITE_TITLE</p>
 <p class="subhead">Database Administration</p>
 </div>
