Added changes including using SCRIPT_NAME in all_ templates.

--- a/ADExpert/ad_book_report.html
+++ b/ADExpert/ad_book_report.html
@@ -20,7 +20,7 @@ _R_QUERY_END_ONE
 
 <table align="center" cellpadding="5">
 <tr>
-<td><b>Firearm ID</b></td>
+<td><b>Record ID</b></td>
 <td><b>Manufacturer and Importer (if any)</b></td>
 <td><b>Model</b></td>
 <td><b>Serial Number</b></td>
