--- a/ADExpert/all_acquisition_pre_edits.html
+++ b/ADExpert/all_acquisition_pre_edits.html
@@ -15,11 +15,11 @@ _R_QUERY_END_ONE
 
 <table align="center" cellpadding="5">
 <tr>
-<td><b><a href="adexpert?action=all_acquisition_pre_edits&sort=acquisition_pre_edit_id">Acquisition Pre Edit ID</b></a></td>
-<td><b><a href="adexpert?action=all_acquisition_pre_edits&sort=acquisition_id">Acquisition ID</b></a></td>
-<td><b><a href="adexpert?action=all_acquisition_pre_edits&sort=firearm_id">Firearm ID</b></a></td>
-<td><b><a href="adexpert?action=all_acquisition_pre_edits&sort=acquisition_date">Acquisition Date</b></a></td>
-<td><b><a href="adexpert?action=all_acquisition_pre_edits&sort=trading_partner_id">Trading Partner ID</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_acquisition_pre_edits&sort=acquisition_pre_edit_id">Acquisition Pre Edit ID</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_acquisition_pre_edits&sort=acquisition_id">Acquisition ID</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_acquisition_pre_edits&sort=firearm_id">Firearm ID</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_acquisition_pre_edits&sort=acquisition_date">Acquisition Date</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_acquisition_pre_edits&sort=trading_partner_id">Trading Partner ID</b></a></td>
 </tr>
 
 _R_REPEAT_START_ONE
