--- a/ADExpert/all_disposition_pre_edits.html
+++ b/ADExpert/all_disposition_pre_edits.html
@@ -15,14 +15,14 @@ _R_QUERY_END_ONE
 
 <table align="center" cellpadding="5">
 <tr>
-<td><b><a href="adexpert?action=all_disposition_pre_edits&sort=disposition_pre_edit_id">Disposition Pre Edit ID</b></a></td>
-<td><b><a href="adexpert?action=all_disposition_pre_edits&sort=disposition_id">Disposition ID</b></a></td>
-<td><b><a href="adexpert?action=all_disposition_pre_edits&sort=disposition_date">Disposition Date</b></a></td>
-<td><b><a href="adexpert?action=all_disposition_pre_edits&sort=acquisition_id">Acquisition ID</b></a></td>
-<td><b><a href="adexpert?action=all_disposition_pre_edits&sort=trading_partner_id">Trading Partner ID</b></a></td>
-<td><b><a href="adexpert?action=all_disposition_pre_edits&sort=4473_number">4473 Number</b></a></td>
-<td><b><a href="adexpert?action=all_disposition_pre_edits&sort=lost_stolen_atf_incident_number">Lost Stolen Atf Incident Number</b></a></td>
-<td><b><a href="adexpert?action=all_disposition_pre_edits&sort=lost_stolen_pd_incident_number">Lost Stolen Pd Incident Number</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_disposition_pre_edits&sort=disposition_pre_edit_id">Disposition Pre Edit ID</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_disposition_pre_edits&sort=disposition_id">Disposition ID</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_disposition_pre_edits&sort=disposition_date">Disposition Date</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_disposition_pre_edits&sort=acquisition_id">Acquisition ID</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_disposition_pre_edits&sort=trading_partner_id">Trading Partner ID</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_disposition_pre_edits&sort=4473_number">4473 Number</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_disposition_pre_edits&sort=lost_stolen_atf_incident_number">Lost Stolen Atf Incident Number</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_disposition_pre_edits&sort=lost_stolen_pd_incident_number">Lost Stolen Pd Incident Number</b></a></td>
 </tr>
 
 _R_REPEAT_START_ONE
