--- a/ADExpert/all_firearm_pre_edits.html
+++ b/ADExpert/all_firearm_pre_edits.html
@@ -15,24 +15,24 @@ _R_QUERY_END_ONE
 
 <table align="center" cellpadding="5">
 <tr>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=firearm_pre_edit_id">Firearm Pre Edit ID</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=firearm_id">Firearm ID</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=manufacturer">Manufacturer</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=importer">Importer</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=model">Model</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=serial_number">Serial Number</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=firearm_type">Firearm Type</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=caliber">Caliber</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=cabinet">Cabinet</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=tray">Tray</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=hammer">Hammer</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=butt">Butt</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=grips">Grips</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=parts">Parts</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=grade">Grade</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=lockup">Lockup</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=trigger_type">Trigger Type</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=notes">Notes</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=firearm_pre_edit_id">Firearm Pre Edit ID</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=firearm_id">Firearm ID</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=manufacturer">Manufacturer</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=importer">Importer</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=model">Model</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=serial_number">Serial Number</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=firearm_type">Firearm Type</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=caliber">Caliber</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=cabinet">Cabinet</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=tray">Tray</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=hammer">Hammer</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=butt">Butt</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=grips">Grips</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=parts">Parts</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=grade">Grade</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=lockup">Lockup</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=trigger_type">Trigger Type</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_firearm_pre_edits&sort=notes">Notes</b></a></td>
 </tr>
 
 _R_REPEAT_START_ONE
