--- a/ADExpert/all_trading_partner_pre_edits.html
+++ b/ADExpert/all_trading_partner_pre_edits.html
@@ -15,24 +15,24 @@ _R_QUERY_END_ONE
 
 <table align="center" cellpadding="5">
 <tr>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=trading_partner_pre_edit_id">Trading Partner Pre Edit ID</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=trading_partner_id">Trading Partner ID</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=name">Name</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=ffl_license_number">Ffl License Number</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=premises_address1">Premises Address1</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=premises_address2">Premises Address2</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=premises_city">Premises City</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=premises_state">Premises State</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=premises_zip">Premises Zip</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=mailing_address1">Mailing Address1</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=mailing_address2">Mailing Address2</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=mailing_city">Mailing City</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=mailing_state">Mailing State</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=mailing_zip">Mailing Zip</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=website">Website</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=email">Email</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=phone">Phone</b></a></td>
-<td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=notes">Notes</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=trading_partner_pre_edit_id">Trading Partner Pre Edit ID</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=trading_partner_id">Trading Partner ID</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=name">Name</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=ffl_license_number">Ffl License Number</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=premises_address1">Premises Address1</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=premises_address2">Premises Address2</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=premises_city">Premises City</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=premises_state">Premises State</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=premises_zip">Premises Zip</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=mailing_address1">Mailing Address1</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=mailing_address2">Mailing Address2</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=mailing_city">Mailing City</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=mailing_state">Mailing State</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=mailing_zip">Mailing Zip</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=website">Website</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=email">Email</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=phone">Phone</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_trading_partner_pre_edits&sort=notes">Notes</b></a></td>
 </tr>
 
 _R_REPEAT_START_ONE
