--- a/makegunlisting/all_listings.html
+++ b/makegunlisting/all_listings.html
@@ -29,16 +29,16 @@ _R_QUERY_END_ONE
 
 <TABLE align="center" cellpadding="5">
 <TR>
-<TD><B><a href="makegunlisting?action=all_listings&sort=serial_number">Serial ID</B></a></TD>
-<TD><B><a href="makegunlisting?action=all_listings&sort=model">Model</B></a></TD>
-<TD><B><a href="makegunlisting?action=all_listings&sort=hammer">Hammer</B></a></TD>
-<TD><B><a href="makegunlisting?action=all_listings&sort=butt">Butt</B></a></TD>
-<TD><B><a href="makegunlisting?action=all_listings&sort=grips">Grips</B></a></TD>
-<TD><B><a href="makegunlisting?action=all_listings&sort=parts">Parts</B></a></TD>
-<TD><B><a href="makegunlisting?action=all_listings&sort=grade">Grade</B></a></TD>
-<TD><B><a href="makegunlisting?action=all_listings&sort=lockup">Lockup</B></a></TD>
-<TD><B><a href="makegunlisting?action=all_listings&sort=trigger_type">Trigger Type</B></a></TD>
-<TD><B><a href="makegunlisting?action=all_listings&sort=notes">Notes</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=all_listings&sort=serial_number">Serial ID</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=all_listings&sort=model">Model</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=all_listings&sort=hammer">Hammer</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=all_listings&sort=butt">Butt</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=all_listings&sort=grips">Grips</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=all_listings&sort=parts">Parts</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=all_listings&sort=grade">Grade</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=all_listings&sort=lockup">Lockup</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=all_listings&sort=trigger_type">Trigger Type</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=all_listings&sort=notes">Notes</B></a></TD>
 <TD><B>Actions</B></TD>
 </TR>
 
