--- a/makegunlisting/edit_listing.html
+++ b/makegunlisting/edit_listing.html
@@ -48,7 +48,9 @@ maxlength="10" value="_R_MODEL"></TD>
 <td><b>Grips</b></td><td>
 <select name="grips">
 <option value="rubber">Rubber</option>
+<option value="Hogue rubber">Hogue Rubber</option>
 <option value="wood">Wood</option>
+<option value="S&amp;W Xenoy">Xenoy</option>
 <option value=""></option>
 </select>
 </td>
