--- a/makegunlisting/iftop.html
+++ b/makegunlisting/iftop.html
@@ -1,10 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML><HEAD><TITLE>Instant Framework Application</TITLE>
-<META content="text/html; charset=windows-1252" http-equiv=Content-Type>
-<META content="MSHTML 5.00.3315.2870" name=GENERATOR><link rel="stylesheet" type="text/css" href="/adexpert-style.css">
-</HEAD>
-<BODY aLink=#ff0000 bgColor=#ffffff link=#0000ff text=#000000 vLink=#000080>
-<DIV class="headline">
-<P class="ctmainhead" align="center">makegunlisting - Instant Framework Application
-<P class="subhead">Database Administration</P>
-</DIV>
+<!DOCTYPE html>
+<html><head><title>_R_APPLICATION</title>
+<meta content="text/html; charset=windows-1252" http-equiv=Content-Type>
+<link rel="stylesheet" type="text/css" href="/_R_CSS_STYLE">
+</head>
+<body aLink=#ff0000 bgColor=#ffffff link=#0000ff text=#000000 vLink=#000080>
+<div class="headline">
+<p class="ctmainhead" align="center">_R_APPLICATION</p>
+<p class="subhead">_R_SITE_TITLE</p>
+</div>
