--- a/ADExpert/all_acquisitions.html
+++ b/ADExpert/all_acquisitions.html
@@ -41,14 +41,18 @@ join trading_partner tp
 on a.trading_partner_id = tp.trading_partner_id
 order by _R_SORT
 _R_QUERY_END_ONE
+
+_R_QUERY_START_TWO
+select count(*) as record_count from acquisition
+_R_QUERY_END_TWO
 <h2 align=center>All Acquisitions</h2>
 
 <table align="center" cellpadding="5">
 <tr>
-<td><b><a href="adexpert?action=all_acquisitions&sort=acquisition_id">Acquisition ID</b></a></td>
-<td><b><a href="adexpert?action=all_acquisitions&sort=serial_number">Serial Number</b></a></td>
-<td><b><a href="adexpert?action=all_acquisitions&sort=acquisition_date">Acquisition Date</b></a></td>
-<td><b><a href="adexpert?action=all_acquisitions&sort=name">Trading Partner</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_acquisitions&sort=acquisition_id">Acquisition ID</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_acquisitions&sort=serial_number">Serial Number</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_acquisitions&sort=acquisition_date">Acquisition Date</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_acquisitions&sort=name">Trading Partner</b></a></td>
 <td><b>Actions</b></td>
 </tr>
 
@@ -64,8 +68,10 @@ delete</a>
 </td>
 </tr>
 _R_REPEAT_END_ONE
-
 </table>
+_R_REPEAT_START_TWO
+Found _R_RECORD_COUNT records
+_R_REPEAT_END_TWO
 <p align="center">Add a <a href="_R_SCRIPT_NAME?action=new_acquisition">new
 acquisition</a></p>
 <p align="center">Return to <a href="_R_SCRIPT_NAME">main screen</a></p>
