--- a/ADExpert/all_dispositions.html
+++ b/ADExpert/all_dispositions.html
@@ -53,24 +53,27 @@ join trading_partner tp
 on d.trading_partner_id = tp.trading_partner_id
 order by _R_SORT
 _R_QUERY_END_ONE
+_R_QUERY_START_TWO
+select count(*) as record_count from disposition
+_R_QUERY_END_TWO
 <h2 align=center>All dispositions</h2>
 
 <table align="center" cellpadding="5">
 <tr>
-<td><b><a href="adexpert?action=all_dispositions&sort=disposition_date">Disposition Date</b></a></td>
-<td><b><a href="adexpert?action=all_dispositions&sort=acquisition_id">Acquisition ID</b></a></td>
-<td><b><a href="adexpert?action=all_dispositions&sort=manufacturer">Manufacturer</b></a></td>
-<td><b><a href="adexpert?action=all_dispositions&sort=model">Model</b></a></td>
-<td><b><a href="adexpert?action=all_dispositions&sort=serial_number">Serial Number</b></a></td>
-<td><b><a href="adexpert?action=all_dispositions&sort=name">Trading Partner</b></a></td>
-<td><b><a href="adexpert?action=all_dispositions&sort=4473_number">4473 Number</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_dispositions&sort=disposition_date">Disposition Date</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_dispositions&sort=acquisition_id">Acquisition ID</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_dispositions&sort=manufacturer">Manufacturer</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_dispositions&sort=model">Model</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_dispositions&sort=serial_number">Serial Number</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_dispositions&sort=name">Trading Partner</b></a></td>
+<td><b><a href="_R_SCRIPT_NAME?action=all_dispositions&sort=4473_number">4473 Number</b></a></td>
 <td><b>Actions</b></td>
 </tr>
 
 _R_REPEAT_START_ONE
 <tr>
 <td>_R_DISPOSITION_DATE</td>
-<td><a href="adexpert?action=edit_acquisition&acquisition_id=_R_ACQUISITION_ID">_R_ACQUISITION_ID</a></td>
+<td><a href="_R_SCRIPT_NAME?action=edit_acquisition&acquisition_id=_R_ACQUISITION_ID">_R_ACQUISITION_ID</a></td>
 <td>_R_MANUFACTURER</td>
 <td>_R_MODEL</td>
 <td>_R_SERIAL_NUMBER</td>
@@ -82,8 +85,10 @@ delete</a>
 </td>
 </tr>
 _R_REPEAT_END_ONE
-
 </table>
+_R_REPEAT_START_TWO
+Found _R_RECORD_COUNT records
+_R_REPEAT_END_TWO
 <p align="center">Add a <a href="_R_SCRIPT_NAME?action=new_disposition">new
 disposition</a></p>
 <p align="center">Return to <a href="_R_SCRIPT_NAME">main screen</a></p>
