--- a/makegunlisting/inventory.html
+++ b/makegunlisting/inventory.html
@@ -21,9 +21,9 @@ _R_QUERY_END_TWO
 
 <TABLE align="center" cellpadding="5">
 <TR>
-<TD><B><a href="makegunlisting?action=inventory&sort=count">Count</B></a></TD>
-<TD><B><a href="makegunlisting?action=inventory&sort=mmodel">Model</B></a></TD>
-<TD><B><a href="makegunlisting?action=inventory&sort=grade">Grade</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=inventory&sort=count">Count</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=inventory&sort=mmodel">Model</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=inventory&sort=grade">Grade</B></a></TD>
 </TR>
 
 _R_REPEAT_START_ONE
