--- a/makegunlisting/statistics2.html
+++ b/makegunlisting/statistics2.html
@@ -22,9 +22,9 @@ _R_QUERY_END_TWO
 
 <TABLE align="center" cellpadding="5">
 <TR>
-<TD><B><a href="makegunlisting?action=inventory&sort=count">Count</B></a></TD>
-<TD><B><a href="makegunlisting?action=inventory&sort=model">Model</B></a></TD>
-<TD><B><a href="makegunlisting?action=inventory&sort=grade">Grade</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=inventory&sort=count">Count</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=inventory&sort=model">Model</B></a></TD>
+<TD><B><a href="_R_SCRIPT_NAME?action=inventory&sort=grade">Grade</B></a></TD>
 </TR>
 
 _R_REPEAT_START_ONE
