Fixed error adding new firearm (set all extended info fields) Fixed A&D report to display blank instead of 1/1/70 for acquisitions with no disposition

--- a/ADExpert/all_inventory_firearms.html
+++ b/ADExpert/all_inventory_firearms.html
@@ -7,7 +7,7 @@ sort = FIREARM_ID
 _R_DEFAULT_END
 
 _R_OPTION_START_SAVE
-insert into firearm values(_R_FIREARM_ID, _R_MANUFACTURER, _R_IMPORTER, _R_MODEL, _R_SERIAL_NUMBER, _R_FIREARM_TYPE, _R_CALIBER, _R_CABINET, _R_TRAY)
+insert into firearm values(_R_FIREARM_ID, _R_MANUFACTURER, _R_IMPORTER, _R_MODEL, _R_SERIAL_NUMBER, _R_FIREARM_TYPE, _R_CALIBER, _R_CABINET, _R_TRAY, _R_HAMMER, _R_BUTT, _R_GRIPS, _R_PARTS, _R_GRADE, _R_LOCKUP, _R_TRIGGER_TYPE, _R_NOTES)
 _R_OPTION_END_SAVE
 
 _R_OPTION_START_UPDATE
