--- a/ADExpert/new_acquisition.html
+++ b/ADExpert/new_acquisition.html
@@ -1,5 +1,9 @@
 _R_IFTOP
 _R_NAVBAR
+_R_OPTION_START_SAVE
+insert into firearm values(_R_FIREARM_ID, _R_MANUFACTURER, _R_IMPORTER, _R_MODEL, _R_SERIAL_NUMBER, _R_FIREARM_TYPE, _R_CALIBER, _R_CABINET, _R_TRAY, _R_HAMMER, _R_BUTT, _R_GRIPS, _R_PARTS, _R_GRADE, _R_LOCKUP, _R_TRIGGER_TYPE, _R_NOTES)
+_R_OPTION_END_SAVE
+
 _R_QUERY_START_ONE
 select f.firearm_id, manufacturer, model, serial_number
 from firearm f
@@ -10,6 +14,7 @@ select trading_partner_id, name, ffl_license_number
 from trading_partner
 order by name
 _R_QUERY_END_TWO
+
 <div class="pagecontent">
 <h2 align=center>Add a new acquisition</h2>
 
