--- a/ADExpert/new_firearm.html
+++ b/ADExpert/new_firearm.html
@@ -86,15 +86,10 @@ maxlength="40"></td>
 <td align="left"><input type="text" name="notes" size="40"
 maxlength="40"></td>
 </tr>
-<tr cols="2">
-<td align="right"><b>256</b></td>
-<td align="left"><input type="text" name="256" size="40"
-maxlength="40"></td>
-</tr>
 
 </table>
 <center><input type=submit value="Add firearm"></center>
-<input type="hidden" name="action" value="all_inventory_firearms">
+<input type="hidden" name="action" value="new_acquisition">
 <input type="hidden" name="option" value="save">
 
 </form>
